# dont-fret

./: .gitignore  CITE.txt  README.md  default_testing.yaml  pyproject.toml
.github/workflows/: build.yml  lint.yml  pin_requirements.yml  pypi_main.yml  pypi_test.yml  pytest.yml
dont_fret/: __init__.py  __main__.py  __version__.py  aggregation.py  burst_search.py  channel_kde.py  expr.py  fileIO.py  formatting.py  models.py  process.py  support.py  tmp.py  transform.py  utils.py
dont_fret/config/: __init__.py  config.py  default.yaml  default_web.yaml  hooks.py
dont_fret/web/: components.py  datamanager.py  filter_editor.py  local_cluster.py  main.py  methods.py  models.py  new_models.py  reactive.py  state.py  style.css  utils.py  widgets.py
dont_fret/web/bursts/: __init__.py  components.py  (+3 more)
requirements/: requirements-macOS-latest-3.10.txt  requirements-macOS-latest-3.11.txt  requirements-macOS-latest-3.12.txt  requirements-macOS-latest-3.13.txt  requirements-macOS-latest-3.9.txt  requirements-ubuntu-latest-3.10.txt  requirements-ubuntu-latest-3.11.txt  requirements-ubuntu-latest-3.12.txt  requirements-ubuntu-latest-3.13.txt  requirements-ubuntu-latest-3.9.txt  requirements-windows-latest-3.10.txt  requirements-windows-latest-3.11.txt  requirements-windows-latest-3.12.txt  requirements-windows-latest-3.13.txt  requirements-windows-latest-3.9.txt
templates/: 01_load_datafile_1.py  02_load_and_plot_bursts.py  03_binning_trace.py  04_multiple_files.py  05_web_models.py  06_preload_web.py  07_c_kde.py
tests/: generate_ds1_result.py  generate_ds2.py  generate_fretbursts_kde.py  generate_web_data.py  helpers.py  test_c_kde.py  test_io.py  test_models.py  test_ui.py  test_web.py
(+24 files in other folders)
